[gd_scene load_steps=6 format=2]

[ext_resource path="res://Riddles/Music_code/message.wav" type="AudioStream" id=1]
[ext_resource path="res://Rooms/journalist/paper_task.png" type="Texture" id=2]
[ext_resource path="res://Rooms/journalist/papertask.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "nothing",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "coin",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 343.514

[node name="Node2D" type="StaticBody2D"]
scale = Vector2( 0.633704, 0.633704 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "nothing"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 1.23399, -1.16875 )
scale = Vector2( 1.01587, 1.01587 )
polygon = PoolVector2Array( -49.6028, -9.1004, -33.8031, 18.5105, -27.0712, 47.1212, 44.1749, 26.3644, 29.589, -20.7589, 24.7325, -41.2284, -23.7744, -24.8494 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
position = Vector2( 14.4891, 4.40974 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
attenuation = 0.017337
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
